--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,15 @@ Device Modeling Works
     <h5>Update History</h5>
 
     <table width="100%">
+         <tr>
+            <td width="15%">2017.02.23</td>
+            <td>Add a MBP video demo to create Ion Ioff correlation graphs.</td>
+        </tr>
+        <tr>
+            <td width="15%">2017.02.23</td>
+            <td>Add a MQA rule example for Ideff, Idhigh, Idlow.</td>
+
+        </tr>
         <tr>
             <td width="15%">2017.02.22</td>
             <td>Add a MQA rule example for Idsat normalized by Idsat@Max(SA_SB).</td>
