--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,15 @@ Device Modeling Works
     <h5>Update History</h5>
 
     <table width="100%">
-         <tr>
+        <tr>
+            <td width="15%">2017.02.27</td>
+            <td>Add MQA rule examples for Mismatch simulation | MOS | Hspice and Spectre.</td>
+        </tr>
+        <tr>
+            <td width="15%">2017.02.27</td>
+            <td>Add a MQA FAQ about 'redefinedparams' error during Spectre simulation.</td>
+        </tr>
+        <tr>
             <td width="15%">2017.02.23</td>
             <td>Add a MBP video demo to create Ion Ioff correlation graphs.</td>
         </tr>
