--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -8,7 +8,8 @@
     <h5><a href="/mqarules/synchro">Synchronized Variables</a></h5>
     <h5><a href="/mqarules/normalize">Normalize Idsat by Idsat@Max(SA)</a></h5>
     <h5><a href="/mqarules/ideff">Ideff | Idhigh | Idlow</a></h5>
-
+    <h5><a href="/mqarules/misHspMos">Mismatch MOS | Hspice</a></h5>
+    <h5><a href="/mqarules/misSpeMos">Mismatch MOS | Spectre</a></h5>
 
     <br/><br/><br/><br/><br/>
 
