--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -6,13 +6,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="device modeling works">
+    <meta name="author" content="Shuang Cai">
 
     <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+
+
 
     <!-- Custom CSS -->
     <link href="/static/css/landing-page.css" rel="stylesheet">
@@ -77,6 +79,9 @@
                     {% endif %}
                 </li>
                 <li>
+                    <a href="/blog"><font style="color:#B22222">Blog</font></a>
+                </li>
+                <li>
                     <a href="/mbpst">MBP Script</a>
                 </li>
                 <li>
@@ -88,9 +93,7 @@
                 <li>
                     <a href="/faq">FAQs</a>
                 </li>
-                <!--<li>-->
-                    <!--<a href="/blog">Blog</a>-->
-                <!--</li>-->
+
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -136,6 +139,7 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/creative.min.js"></script>
 
 </body>
 
