--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,9 @@ Device Modeling Works
                     <hr class="intro-divider">
                     <ul class="list-inline intro-social-buttons">
                         <li>
+                            <a href="/blog" class="btn btn-default btn-lg" style="background-color:#B22222"><font style="color:white">Blog</font></a>
+                        </li>
+                        <li>
                             <a href="/mbpst" class="btn btn-default btn-lg">MBP Script <sup>{{mbpstCt}}</sup></a>
                         </li>
                         <li>
@@ -32,9 +35,7 @@ Device Modeling Works
                         <li>
                             <a href="/faq" class="btn btn-default btn-lg">FAQs <sup>{{faqCt}}</sup></a>
                         </li>
-                        <!--<li>-->
-                        <!--<a href="/blog" class="btn btn-default btn-lg">Blog</a>-->
-                        <!--</li>-->
+
                     </ul>
                 </div>
             </div>
