--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,9 @@
 <table width="100%">
     <tr>
+        <td width="15%">2017.03.01</td>
+        <td>Open Blog to public, everyone can view blog articles without login.</td>
+    </tr>
+    <tr>
         <td width="15%">2017.02.27</td>
         <td>Add MQA rule examples for Mismatch simulation | MOS | Hspice and Spectre.</td>
     </tr>
