--- a/templates/blog/blog_index.html
+++ b/templates/blog/blog_index.html
@@ -9,43 +9,89 @@ Blog
 
 
 <div class="container">
+    <div>
+
+
+        <div>
+            <a href="/blog/why_dm_services">
+                <div>
+                    <h4>Why Device Modeling Services</h4>
+                    <h5>by Raj Sodhi[Keysight] on Feb 3, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/why_dm_services/serv.jpg" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
 
     <div>
-        <a href="/blog/vth_near_gm">
 
-            <div>
+
+        <div>
+            <a href="/blog/vth_near_gm">
                 <div>
                     <h4>Transconductance Modeling for Low-Power Design</h4>
-                    <h5>By Raj Sodhi on Jan 18, 2017</h5>
+                    <h5>By Raj Sodhi[Keysight] on Jan 18, 2017</h5>
                 </div>
-            </div>
-            <br/>
-            <div>
-                <img src="static/blog/vth_near_gm/1.png" alt="">
-            </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/vth_near_gm/1.png" width="180" alt="">
+        </div>
 
-        </a>
+
+        <hr/>
     </div>
-    <br/>
-    <hr/>
+
 
     <div>
-        <a href="/blog/vth_algor">
 
-            <div>
+
+        <div>
+            <a href="/blog/ftfmax">
                 <div>
-                    <h4>How to Extract Threshold Voltage of MOSFETs</h4>
-                    <h5>By MA Long on Nov 17, 2016</h5>
+                    <h4>What are Ft and Fmax? and How to Extract Them</h4>
+                    <h5>by Jason Chen[Keysight] on Dec 18, 2016</h5>
 
                 </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/ftfmax/1.png" width="180" alt="">
+        </div>
 
-            </div>
-            <br/>
-            <div>
-                <img src="static/blog/vth_algor/1.png" alt="">
-            </div>
 
-        </a>
+        <hr/>
+    </div>
+
+
+    <div>
+
+
+        <div>
+            <a href="/blog/vth_algor">
+                <div>
+                    <h4>How to Extract Threshold Voltage of MOSFETs</h4>
+                    <h5>By MA Long[Keysight] on Nov 17, 2016</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/vth_algor/1.png" width="180" alt="">
+        </div>
+
+
+        <hr/>
     </div>
 
 
