--- a/templates/blog/post/vth_algor.html
+++ b/templates/blog/post/vth_algor.html
@@ -1,10 +1,10 @@
-{% extends "layouts/base.html" %}
+{% extends "layouts/mf.html" %}
 {% block title%}
 Vth Algorithm
 {% endblock %}
 
 {% block content %}
-<br/><br/><br/>
+
 <div class="container">
     <h3>How to Extract Threshold Voltage of MOSFETs</h3>
     <h5>by MA Long on Nov 17, 2016 -- <a
