--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,13 @@
 <table width="100%">
     <tr>
+        <td width="15%">2017.03.02</td>
+        <td>Add a blog: Why Device Modeling Services.</td>
+    </tr>
+    <tr>
+        <td width="15%">2017.03.02</td>
+        <td>Add a blog: What are Ft and Fmax of a transistor? and How to Extract Them.</td>
+    </tr>
+    <tr>
         <td width="15%">2017.03.01</td>
         <td>Open Blog to public, everyone can view blog articles without login.</td>
     </tr>
