--- a/templates/blog/post/vth_near_gm.html
+++ b/templates/blog/post/vth_near_gm.html
@@ -1,10 +1,10 @@
-{% extends "layouts/base.html" %}
+{% extends "layouts/mf.html" %}
 {% block title%}
 Vth Near Gm
 {% endblock %}
 
 {% block content %}
-<br/><br/><br/>
+
 <div class="container">
     <h3>Transconductance Modeling for Low-Power Design</h3>
     <h5>By Raj Sodhi on Jan 18, 2017 -- <a
