--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -14,6 +14,8 @@
     <!-- Bootstrap Core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
+    <!--favicon-->
+    <link rel="shortcut icon" href="" type="image/x-icon"/>
 
 
     <!-- Custom CSS -->
@@ -32,7 +34,7 @@
     <![endif]-->
 
 
-<script>
+    <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -41,7 +43,8 @@
   ga('create', 'UA-91396720-1', 'auto');
   ga('send', 'pageview');
 
-</script>
+
+    </script>
 </head>
 
 <body>
