--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,13 +8,16 @@ Dashboard
 <br/><br/><br/>
 <div class="container">
     <br/>
-    <h3>Dashboard</h3>
+    <h3>Dashboard || <a href="/chart_view_98adsfhrhwgijj!!kjfskvgahvg877awefjkjdfkagh0248_df83j" target="_blank">Charts
+        View</a></h3>
     <hr/>
     ICCAP <font size="6"> {{ iccap_ct }} </font> --
     MBP <font size="6"> {{ mbp_ct }} </font> --
     MQA <font size="6"> {{ mqa_ct }} </font> --
     WPE <font size="6"> {{ wpe_ct }} </font> --
     A-LFNA <font size="6"> {{alfna_ct }}</font> --
+    Blog <font size="6"> {{blog_ct}}</font> --
+    Services <font size="6"> {{service_ct}}</font> --
     Video Demos <font size="6"> {{video_ct}}</font>
     <br/>
     User Count: <font size="6"> {{user_ct}}</font> ---- Search Count: <font size="6"> {{search_ct}}</font>
