--- a/templates/viewerListFor.html
+++ b/templates/viewerListFor.html
@@ -15,7 +15,7 @@ Viewer List
     <table width="80%">
         <thead>
         <tr>
-            <th width="18px">User ID</th>
+            <th width="18px">ID</th>
             <th width="50px">User Name</th>
             <th width="50px">Email</th>
             <th width="50px">Company</th>
