--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,8 +24,9 @@ Dashboard
     <br/>
     <br/>
     <div style="height:530px">
-        <div style="float:left; width: 70%; margin-right:5px;border-right-width:1px;border-right-style:solid; border-right-color: #D3D3D3">
-            <h3>Top 20 Views</h3>
+        <!--style="float:left; width: 0%; margin-right:5px;border-right-width:1px;border-right-style:solid; border-right-color: #D3D3D3"-->
+        <div>
+            <h3>Top 20 Views </h3>
             <hr/>
             <table width="100%">
                 {% for p in postTop %}
@@ -46,29 +47,34 @@ Dashboard
                 {% endfor %}
             </table>
         </div>
-        <div style="float:center;  overflow: auto">
-            <h3>Recent 20 Searches</h3>
-            <hr/>
-            <table>
 
-                {% for p in searchList %}
-                <tr>
-                    <td width="50%"><font size="3">{{ p[0] }} </font></td>
-                    <td>{{p[1]}}</td>
-                </tr>
-
-                {% endfor %}
-            </table>
-            <br/>
-            <a href="/recent100SearchHis" target="_blank">Recent 100 Search Text</a>
-
-            <br/><br/>
-        </div>
     </div>
 
-    <br/>
+    <hr/>
 
-    <h3>Last 20 Views</h3>
+    <div>
+        <h3>Recent 20 Searches ||  <a href="/recent100SearchHis" target="_blank">Recent 100 Searches</a></h3>
+        <hr/>
+        <table width="90%">
+
+            {% for p in searchList %}
+            <!--#search text 0, date 1, userName 2, company 3-->
+            <tr>
+                <td width="40%"><font size="3">{{ p[0] }} </font></td>
+                <td width="20%">{{p[2]}}</td>
+                <td width="20%">{{p[3]}}</td>
+                <td width="20%">{{p[1]}}</td>
+            </tr>
+
+            {% endfor %}
+        </table>
+        <br/>
+
+
+        <br/><br/>
+    </div>
+
+    <h3>Last 20 Views || <a href="/last_300_views" target="_blank">Last 300 Views</a></h3>
     <hr/>
     <table width="100%">
         <thead>
