--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -74,7 +74,7 @@ Dashboard
         <br/><br/>
     </div>
 
-    <h3>Last 20 Views || <a href="/last_300_views" target="_blank">Last 300 Views</a></h3>
+    <h3>Last 20 Posts || <a href="/last_300_views" target="_blank">Last 300 Posts</a></h3>
     <hr/>
     <table width="100%">
         <thead>
