--- a/templates/dashboard_chart_view.html
+++ b/templates/dashboard_chart_view.html
@@ -13,27 +13,26 @@ Dashboard | Charts
     <div>
         <embed type="image/svg+xml" src={{contents_graph|safe}} style="max-width:600px"/>
     </div>
+    <hr/>
+
+    <h3>View # by Category</h3>
+    <div>
+        <embed type="image/svg+xml" src={{countByCategory_graph|safe}} style="max-width:600px; "/>
+    </div>
 
     <hr/>
 
-    <h3>Viewer Counts</h3>
+    <h3>User View #</h3>
     <div>
         <embed type="image/svg+xml" src={{userView_graph|safe}} style="max-width:800px; "/>
     </div>
 
     <hr/>
 
-    <h3>Top 30 Views</h3>
+    <h3>Top 30 Posts</h3>
     <div>
         <embed type="image/svg+xml" src={{topView_graph|safe}} style="max-width:800px; "/>
     </div>
-     <hr/>
-
-    <h3>View Count by Category</h3>
-    <div>
-        <embed type="image/svg+xml" src={{countByCategory_graph|safe}} style="max-width:800px; "/>
-    </div>
-
 
 
     <br/><br/> <br/><br/><br/>
