--- a/templates/dashboard_chart_view.html
+++ b/templates/dashboard_chart_view.html
@@ -22,6 +22,13 @@ Dashboard | Charts
 
     <hr/>
 
+    <h3>User # by Category</h3>
+    <div>
+        <embed type="image/svg+xml" src={{userCountByCategory_graph|safe}} style="max-width:600px; "/>
+    </div>
+
+    <hr/>
+
     <h3>User View #</h3>
     <div>
         <embed type="image/svg+xml" src={{userView_graph|safe}} style="max-width:800px; "/>
