--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,4 +1,8 @@
 <table width="100%">
+     <tr>
+        <td width="15%">2017.03.08</td>
+        <td>Now hosted on HTTPS(secured HTTP), please start to visit us at <a href="https://devicemodelingworks.net" target="_self"><font style="color:red">https</font>://DeviceModelingWorks.net</a> </td>
+    </tr>
     <tr>
         <td width="15%">2017.03.02</td>
         <td>Add a blog: Why Device Modeling Services.</td>
