--- a/templates/blog/blog_index.html
+++ b/templates/blog/blog_index.html
@@ -13,6 +13,26 @@ Blog
 
 
         <div>
+            <a href="/blog/iccap_python">
+                <div>
+                    <h4>Python Programming integration with IC-CAP</h4>
+                    <h5>by Raj Sodhi[Keysight] on Mar 16, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/iccap_python/chart.png" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
+    <div>
+
+
+        <div>
             <a href="/blog/why_dm_services">
                 <div>
                     <h4>Why Device Modeling Services</h4>
