--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -28,6 +28,8 @@ Add Post
             <option value="video">Video Demo</option>
             <option value="blog">Blog</option>
             <option value="mqarules">MQA Rules</option>
+            <option value="iccapfaq">ICCAP FAQ</option>
+
         </select>
         <br/><br/>
         <label>Content:</label><br/>
