--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,4 +1,12 @@
 <table width="100%">
+    <tr>
+        <td width="15%">2017.03.23</td>
+        <td>Add a MBP Video tutorial: <a href="/video/MBP_dIdsat_by_SA" target="_blank">delta-Idsat normalized by max SA/SB</a> </td>
+    </tr>
+     <tr>
+        <td width="15%">2017.03.17</td>
+        <td>Add a blog: <a href="/blog/iccap_python" target="_blank"> Python<sup>TM</sup> Programming integration with IC-CAP</a></td>
+    </tr>
      <tr>
         <td width="15%">2017.03.08</td>
         <td>Now hosted on HTTPS(secured HTTP), please start to visit us at <a href="https://devicemodelingworks.net" target="_self"><font style="color:red">https</font>://DeviceModelingWorks.net</a> </td>
