--- a/templates/video/toc.html
+++ b/templates/video/toc.html
@@ -2,6 +2,7 @@
 
 <div>
     <h4>MBP</h4>
+    <h5><a href="/video/MBP_dIdsat_by_SA">dIdsat Normalized by Max SA</a></h5>
     <h5><a href="/video/MBP_Ion_Ioff_Correlation">Ion Ioff Correlation</a></h5>
     <h5><a href="/video/MBP_check_netlist">Check MBP Netlist Files </a></h5>
     <h5><a href="/video/MBP_tabs_sfloat">Make MBP Panels Afloat</a></h5>
