--- a/templates/video/video_index.html
+++ b/templates/video/video_index.html
@@ -15,7 +15,8 @@ Video Demos
         <div style="float:center; height:1200px; overflow: auto">
             <br/>
             {% block videomain%}
-            <h3>Please pick a Demo from the left, or Search.</h3>
+            <h4>Please pick a Demo from the left, or Search.</h4>
+            <h5>Videos can generally be switched to <font style="color:red">720p <sup>HD</sup></font> for better quality. </h5>
             {% endblock %}
             <br/><br/>
         </div>
