--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -25,6 +25,7 @@ Add Post
             <option value="mbpst">MBP Script Tutorial</option>
             <option value="mbpfaq">MBP FAQ</option>
             <option value="mqafaq">MQA FAQ</option>
+            <option value="pyrfs">PyRFS</option>
             <option value="video">Video Demo</option>
             <option value="blog">Blog</option>
             <option value="mqarules">MQA Rules</option>
