--- a/templates/blog/blog_index.html
+++ b/templates/blog/blog_index.html
@@ -9,6 +9,142 @@ Blog
 
 
 <div class="container">
+
+     <div>
+        <div>
+            <a href="/blog/mqa_pyrfs">
+                <div>
+                    <h4>Customizing Tables Just Got Easier with a New Python Module for MQA </h4>
+                    <h5>by Shuang Cai[Keysight], July 07, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/mqa_pyrfs/table.png" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
+
+    <div>
+        <div>
+            <a href="/blog/iccap_pyvisa_101">
+                <div>
+                    <h4>Extending the Power of IC-CAP Software with
+                        Python - PyVISA Instrument Control</h4>
+                    <h5>by Michael Arendall[nSpace Labs], May 31, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/pyvisa/1.png" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
+
+    <div>
+        <div>
+            <a href="/blog/mbp_bsim4_flow">
+                <div>
+                    <h4>How to Extract a BSIM4 DC Model</h4>
+                    <h5>by Long Ma[Keysight] on June 26, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/mbp_bsim4_flow/1.jpg" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
+
+
+    <div>
+        <div>
+            <a href="/blog/mbp_sram">
+                <div>
+                    <h4>SRAM Cell Modeling Solution using MBP 2017</h4>
+                    <h5>by Shuang Cai[Keysight] on June 6, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/mbp_sram/1.jpg" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
+    <div>
+        <div>
+            <a href="/blog/angelov_in_ads">
+                <div>
+                    <h4>Apply Angelov GaN Model Extracted by IC-CAP in ADS</h4>
+                    <h5>by Feng Gu[Keysight] on May 22, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/angelov_in_ads/7.png" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
+    <div>
+
+
+        <div>
+            <a href="/blog/sram_modeling_mbp2017">
+                <div>
+                    <h4>SRAM Cell Model Generation and Modeling Efficiency Take Center Stage in New MBP 2017</h4>
+                    <h5>by Kaelly Farnham[Keysight] on May 04, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/sram_modeling/2.png" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
+    <div>
+
+
+        <div>
+            <a href="/blog/load_csv_in_mbp">
+                <div>
+                    <h4>Load User .csv Data into MBP</h4>
+                    <h5>by Shuang Cai[Keysight] on Mar 28, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/load_csv_in_mbp/2.png" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
     <div>
 
 
