--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -44,6 +44,7 @@
   ga('send', 'pageview');
 
 
+
     </script>
 </head>
 
@@ -85,10 +86,13 @@
                     <a href="/blog"><font style="color:#B22222">Blog</font></a>
                 </li>
                 <li>
-                    <a href="/mbpst">MBP Script</a>
+                    <a href="/mbpst">MBP S</a>
                 </li>
                 <li>
-                    <a href="/video">Video Demos</a>
+                    <a href="/video">Videos</a>
+                </li>
+                <li>
+                    <a href="/pyrfs"><font style="color:#1E6ECC">PyRFS</font></a>
                 </li>
                 <li>
                     <a href="/mqarules">MQA Rules</a>
