--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -10,6 +10,7 @@
     <h5><a href="/mqarules/ideff">Ideff | Idhigh | Idlow</a></h5>
     <h5><a href="/mqarules/misHspMos">Mismatch MOS | Hspice</a></h5>
     <h5><a href="/mqarules/misSpeMos">Mismatch MOS | Spectre</a></h5>
+    <h5><a href="/mqarules/symm">Symmetry Check up to 3rd-order Derivative</a></h5>
 
     <br/><br/><br/><br/><br/>
 
