--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,15 +1,167 @@
 <table width="100%">
+
+    <tr>
+        <td width="15%">2017.07.28</td>
+        <td>Add a MQA rule: <a href="/mqarules/symm" target="_blank">Symmetry Check up to 3rd-order
+            Derivative</a>
+
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.07.08</td>
+        <td>Add an ICCAP video: <a href="/video/iccap_bjt_modeling" target="_blank">How to Model a Bipolar Junction
+            Transistor</a>
+            | Gummel-Poon
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.07.07</td>
+        <td>Add a blog: <a href="/blog/mqa_pyrfs" target="_blank">Customizing Tables Just Got Easier with a New Python
+            Module for MQA </a>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.07.05</td>
+        <td>Add an ICCAP Video: <a href="/video/ICCAP_OPEN_GUI" target="_blank">How to Simplify Device Model Extraction
+            using
+            an Open Source User Interface</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.06.29</td>
+        <td><font style="color:red">PyRFS Tutorial Online!</font><a href="/pyrfs" target="_blank">The Python Module for
+            MQA Table Customization</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.06.26</td>
+        <td>Add a blog: <a href="/blog/iccap_pyvisa_101" target="_blank">Extending the Power of IC-CAP Software with
+            Python - PyVISA Instrument Control </a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.06.26</td>
+        <td>Add a blog: <a href="/blog/mbp_bsim4_flow" target="_blank">How to Extract a BSIM4 DC Model</a> | Keysight
+            Official version.
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.06.26</td>
+        <td>Update a blog: <a href="/blog/mbp_sram" target="_blank">SRAM Cell Modeling Solution using MBP 2017</a> |
+            Keysight Official version.
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.06.06</td>
+        <td>Add a blog: <a href="/blog/mbp_sram" target="_blank">SRAM Cell Modeling Solution using MBP 2017</a> | <font
+                style="color:red">Live Demo!</font>
+        </td>
+    </tr>
+
+
+    <tr>
+        <td width="15%">2017.05.26</td>
+        <td>Add a blog: <a href="/blog/angelov_in_ads" target="_blank">Apply Angelov GaN Model Extracted by IC-CAP in
+            ADS</a>
+        </td>
+    </tr>
+    <tr>
+
+    <tr>
+        <td width="15%">2017.05.13</td>
+        <td>Add a blog: <a href="/blog/sram_modeling_mbp2017" target="_blank">SRAM Cell Model Generation and Modeling
+            Efficiency Take Center Stage in New Software Releases</a>
+        </td>
+    </tr>
+    <tr>
+
+    <tr>
+        <td width="15%">2017.05.12</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/internalspice3" target="_blank">Enable the Upgraded Internal Spice3 for
+            MQA</a> | BSIM-CMG -IMG -BULK, etc.
+
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.05.09</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/addPyrfs" target="_blank">Enable PyRFS for MQA</a> | Fully
+            Customizable Table Generation using <font style="color:red">Python!</font>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.05.08</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/addInstParam" target="_blank">Add Device Instance Parameters</a> | Exampled:
+            W for BSIMCMG
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.05.04</td>
+        <td><font color="red">May the 4th be with you~</font> Add a MBP FAQ: <a href="/mbpfaq/tinyNumbers"
+                                                                                target="_blank">Display Tiny
+            Numbers</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.04.25</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/saveInstToMDM" target="_blank">Save DUT Parameters and Variables into
+            MDM file</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.04.07</td>
+        <td>Add a MBP Video tutorial: <a href="/video/MBP_diff_res" target="_blank">Apply different Drain parasitic
+            resistors to DUTs</a> using subckt approach
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.04.04</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/linefit" target="_blank">Linefit - Extract BSIM4 Parameter NFACTOR<sub>(Subthreshold
+            Swing Coefficient)</sub></a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.03.29</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/derivative" target="_blank">How to do <i>derivative</i> in MBP Script</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.03.29</td>
+        <td>Update the blog: <a href="/blog/load_csv_in_mbp" target="_blank">How to load comma separated values(CSV)
+            into MBP</a> to Handle More .csv Columns
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.03.28</td>
+        <td>Add a blog: <a href="/blog/load_csv_in_mbp" target="_blank">How to load comma separated values(CSV) into
+            MBP</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.03.24</td>
+        <td>Add a MBP Video tutorial: <a href="/video/MBP_IV_T" target="_blank">View IV curves across Temperatures</a>
+        </td>
+    </tr>
     <tr>
         <td width="15%">2017.03.23</td>
-        <td>Add a MBP Video tutorial: <a href="/video/MBP_dIdsat_by_SA" target="_blank">delta-Idsat normalized by max SA/SB</a> </td>
+        <td>Add a MBP Video tutorial: <a href="/video/MBP_dIdsat_by_SA" target="_blank">delta-Idsat Normalized by Max
+            SA/SB</a></td>
     </tr>
-     <tr>
+    <tr>
         <td width="15%">2017.03.17</td>
-        <td>Add a blog: <a href="/blog/iccap_python" target="_blank"> Python<sup>TM</sup> Programming integration with IC-CAP</a></td>
+        <td>Add a blog: <a href="/blog/iccap_python" target="_blank"> Python<sup>TM</sup> Programming Integration with
+            IC-CAP</a></td>
     </tr>
-     <tr>
+    <tr>
         <td width="15%">2017.03.08</td>
-        <td>Now hosted on HTTPS(secured HTTP), please start to visit us at <a href="https://devicemodelingworks.net" target="_self"><font style="color:red">https</font>://DeviceModelingWorks.net</a> </td>
+        <td>Now hosted on HTTPS(secured HTTP), please start to visit us at <a href="https://devicemodelingworks.net"
+                                                                              target="_self"><font style="color:red">https</font>://DeviceModelingWorks.net</a>
+        </td>
     </tr>
     <tr>
         <td width="15%">2017.03.02</td>
