--- a/templates/video/toc.html
+++ b/templates/video/toc.html
@@ -1,7 +1,16 @@
 <br/>
 
 <div>
+    <h4>ICCAP</h4>
+    <h5><a href="/video/iccap_bjt_modeling">How to Model a BJT(Gummel-Poon)</a></h5>
+    <h5><a href="/video/ICCAP_OPEN_GUI">Open Source User Interface</a></h5>
+
+    <hr/>
+
     <h4>MBP</h4>
+    <h5><a href="/video/mbp_sram">SRAM Cell Modeling Solution </a></h5>
+    <h5><a href="/video/MBP_diff_res">Apply different Drain parasitic resistors to DUTs</a></h5>
+    <h5><a href="/video/MBP_IV_T">View IV curves across Temperatures</a></h5>
     <h5><a href="/video/MBP_dIdsat_by_SA">dIdsat Normalized by Max SA</a></h5>
     <h5><a href="/video/MBP_Ion_Ioff_Correlation">Ion Ioff Correlation</a></h5>
     <h5><a href="/video/MBP_check_netlist">Check MBP Netlist Files </a></h5>
@@ -14,6 +23,7 @@
     <h5><a href="/video/MBP_bigger_RMS">Why is my RMS Larger after Optimization</a></h5>
     <h5><a href="/video/MBP_sigNum_symbolSize">Change Significant Digits and Symbol Size</a></h5>
     <h5><a href="/video/MBP_RMS_algor">MBP RMS Algorithms</a></h5>
+    <hr/>
 
     <h4>MQA</h4>
     <h5><a href="/video/mqaHvsS">Compare HSPICE vs SPECTRE Models</a></h5>
