--- a/templates/faq/toc.html
+++ b/templates/faq/toc.html
@@ -3,6 +3,7 @@
 <div>
     <h4><a href="/mbpfaq">MBP FAQs</a></h4>
     <h4><a href="/mqafaq">MQA FAQs</a></h4>
+    <h4><a href="/iccapfaq">ICCAP FAQs</a></h4>
 
     <br/><br/><br/><br/><br/>
 </div>
