--- a/templates/index.html
+++ b/templates/index.html
@@ -16,18 +16,23 @@ Device Modeling Works
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-message">
-                    <h1>Device Modeling Works</h1>
-                    <h3>Share, and Get the Job Done Easier</h3>
+                    <h2>Device Modeling Works</h2>
+                    <h4>Share, Success </h4>
                     <hr class="intro-divider">
                     <ul class="list-inline intro-social-buttons">
                         <li>
-                            <a href="/blog" class="btn btn-default btn-lg" style="background-color:#B22222"><font style="color:white">Blog</font></a>
+                            <a href="/blog" class="btn btn-default btn-lg" style="background-color:#B22222"><font
+                                    style="color:white">Blog</font></a>
                         </li>
                         <li>
-                            <a href="/mbpst" class="btn btn-default btn-lg">MBP Script <sup>{{mbpstCt}}</sup></a>
+                            <a href="/mbpst" class="btn btn-default btn-lg">MBP S<sup>{{mbpstCt}}</sup></a>
                         </li>
                         <li>
-                            <a href="/video" class="btn btn-default btn-lg">Video Demos <sup>{{videoCt}}</sup></a>
+                            <a href="/video" class="btn btn-default btn-lg">Videos <sup>{{videoCt}}</sup></a>
+                        </li>
+                        <li>
+                            <a href="/pyrfs" class="btn btn-default btn-lg" style="background-color:#1E6ECC"><font
+                                    style="color:white">PyRFS<sup>{{pyrfsCt}}</sup></font></a>
                         </li>
                         <li>
                             <a href="/mqarules" class="btn btn-default btn-lg">MQA Rules <sup>{{ruleCt}}</sup></a>
