--- a/templates/video/MBP_dIdsat_SA.html
+++ b/templates/video/MBP_dIdsat_SA.html
@@ -1,7 +1,7 @@
 {% extends "video/video_index.html" %}
 {% block videomain %}
 
-<h2>MBP FAQ</h2>
+<h2>MBP Demo</h2>
 
 <h3>Create dIdsat normalized by max SA/SB</h3>
 <hr>
