--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -11,6 +11,8 @@
     <h5><a href="/mqarules/misHspMos">Mismatch MOS | Hspice</a></h5>
     <h5><a href="/mqarules/misSpeMos">Mismatch MOS | Spectre</a></h5>
     <h5><a href="/mqarules/symm">Symmetry Check up to 3rd-order Derivative</a></h5>
+    <h5><a href="/mqarules/misR">Mismatch R | Hspice</a></h5>
+    <h5><a href="/mqarules/wpe">WPE Rule</a></h5>
 
     <br/><br/><br/><br/><br/>
 
