--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,6 +1,44 @@
 <table width="100%">
 
     <tr>
+        <td width="15%">2017.08.12</td>
+        <td>Add a MQA rule: <a href="/mqarules/wpe" target="_blank">Well Proximity Effect Rule Example</a>
+
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.08.11</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/TightLoopWithMeasData" target="_blank">Use Synchronized Instance Param Values from Meas for Simulation</a>
+
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.08.10</td>
+        <td>Add a MQA rule: <a href="/mqarules/misR" target="_blank">Mismatch Rule for Resistor | Hspice</a>
+
+        </td>
+    </tr>
+
+
+    <tr>
+        <td width="15%">2017.08.09</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/openoffice" target="_blank">Enable OpenOffice on Linux for Reporting</a>
+
+        </td>
+    </tr>
+
+
+    <tr>
+        <td width="15%">2017.08.04</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/2port" target="_blank">How to Change 2-port Network Input and Output
+            Ports</a>
+
+        </td>
+    </tr>
+
+    <tr>
         <td width="15%">2017.07.28</td>
         <td>Add a MQA rule: <a href="/mqarules/symm" target="_blank">Symmetry Check up to 3rd-order
             Derivative</a>
